<resources>
    <string name="app_name">PPPCar</string>
    <string name="me">我</string>
    <string name="my_papa">我的趴趴</string>
    <string name="specification">分类</string>
    <string name="find">发现</string>
    <string name="car_brand">汽车品牌</string>
    <string name="parts_brand">配件品牌</string>
    <string name="home">首页</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_integral">我的积分</string>
    <string name="my_work">我的作业</string>
    <string name="my_order">我的订单</string>
    <string name="see_all_order">查看全部订单</string>
    <string name="waiting_examine">待审核</string>
    <string name="waiting_pay">待付款</string>
    <string name="waiting_diliver">待发货</string>
    <string name="waiting_receive">待收货</string>
    <string name="return_goods">退货</string>
    <string name="my_auction">我的竞拍</string>
    <string name="integral_mall">积分商城</string>
    <string name="sell_center">销售中心</string>
    <string name="business_extension">销售推广</string>
    <string name="headportrait">头像</string>
    <string name="nieck_name">昵称</string>
    <string name="my_invitation_code">我的邀请码</string>
    <string name="phone_number">手机</string>
    <string name="phone_number_">手机：</string>
    <string name="tel_number">固定电话</string>
    <string name="tel_number_">固定电话：</string>
    <string name="email">邮箱</string>
    <string name="business_license">营业执照</string>
    <string name="shop_img">店铺照片</string>
    <string name="legal_person">法人</string>
    <string name="comapny_name">公司名称</string>
    <string name="business_license_registration_number">营业执照注册号</string>
    <string name="contact_person">联系人</string>
    <string name="company_address">公司地址</string>
    <string name="select_head_portrait">选择头像</string>
    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="toast_unexpected_error">Unexpected error</string>
    <string name="hot_city">热门城市</string>
    <string name="current_city">当前城市</string>
    <string name="all_city">全部城市</string>
    <string name="auto_position">定位</string>
    <string name="auto_position_ing">正在定位</string>
    <string name="auto_position_error_please_manual_position">定位失败，请手动定位</string>
    <string name="network_error">网络错误</string>
    <string name="brand_center">品牌中心</string>
    <string name="auction_center">拍卖中心</string>
    <string name="refit_shop">改装门户</string>
    <string name="exhaust">排气</string>
    <string name="hot_recommand">热门推荐</string>
    <string name="shock_absorber">避震</string>
    <string name="hob">轮毂</string>
    <string name="retail_price">零售价</string>
    <string name="retail_price_">零售价：</string>
    <string name="factory_number">出厂编号</string>
    <string name="factory_number_">出厂编号：</string>
    <string name="brand">品牌</string>
    <string name="brand_">品牌：</string>
    <string name="stock">库存</string>
    <string name="stock_">库存：</string>
    <string name="freight">运费</string>
    <string name="freight_">运费：</string>
    <string name="wholesale_price">批发价</string>
    <string name="wholesale_price_">批发价：</string>
    <string name="please_select_specification">请选择规格</string>
    <string name="preferential_volume">优惠卷</string>
    <string name="preferential_package">优惠套餐</string>
    <string name="product_evaluate">商品评价</string>
    <string name="collect">收藏</string>
    <string name="cart">购物车</string>
    <string name="put_into_cart">加入购物车</string>
    <string name="buy_immediatly">立即购买</string>
    <string name="installment_payment">分期付款</string>
    <string name="have_goods">有好货</string>
    <string name="delicate_shop">精装店</string>
    <string name="refit_work">改装作业</string>
    <string name="empty_cart">您的购物车里还没有任何产品</string>
    <string name="go_to_pay">去结算</string>
    <string name="amount_of_money_of_product">商品金额合计</string>
    <string name="go_to_buy">马上去逛逛</string>
    <string name="selecte_all">全选</string>
    <string name="move_to_collect">移入收藏夹</string>
    <string name="edit">编辑</string>
    <string name="complete">完成</string>
    <string name="delete">删除</string>
    <string name="pay_center">支付中心</string>
    <string name="order_number">订单编号</string>
    <string name="order_number_">订单编号：</string>
    <string name="order_amount_of_money">订单金额</string>
    <string name="pay_by_card">银行卡支付</string>
    <string name="pay_by_ali_pay">支付宝支付</string>
    <string name="pay_by_wechat">微信支付</string>
    <string name="pay_by_offline">线下汇款</string>
    <string name="payment_hint">请您在提交订单后24小时内完成支付，否则订单会自动取消</string>
    <string name="sure_to_pay">确认付款</string>
    <string name="pay_failed">支付失败</string>
    <string name="sorry_pay_failed">抱歉，支付失败</string>
    <string name="error_reason">错误原因</string>
    <string name="pay_again">重新支付</string>
    <string name="pay_stage_detail">分期详情</string>
    <string name="stage_amount_">分期金额：</string>
    <string name="counter_fee">手续费</string>
    <string name="counter_fee_">手续费：</string>
    <string name="pay_settlement">订单结算</string>
    <string name="receiver">收货人</string>
    <string name="receiver_">收货人：</string>
    <string name="receiver_address">收获地址</string>
    <string name="receiver_address_">收获地址：</string>
    <string name="pay_delivery">支付/送货</string>
    <string name="pay_online">在线支付</string>
    <string name="invoice_information">发票信息</string>
    <string name="order_remark">订单备注</string>
    <string name="order_remark_">订单备注：</string>
    <string name="optional_to_supply_your_special_needs">可选，可填写你的特殊需求</string>
    <string name="product_pay_amount">商品总金额</string>
    <string name="stage_buy">分期购买</string>
    <string name="select_stage_num">选择期数</string>
    <string name="submit_stage_order">提交分期订单</string>
    <string name="query_logistic">物流查询</string>
    <string name="logistic_company_">配送公司：</string>
    <string name="continue_buy">继续购物</string>
    <string name="see_order">查看订单</string>
    <string name="order_submit_succeed">订单提交成功</string>
    <string name="congratulation_order_submit_succeed">恭喜您，订单提交成功</string>
    <string name="order_submit_succeed_hint">我们将在两个小时之内通知您审核结果！</string>
    <string name="manage_order">订单管理</string>
    <string name="all">全部</string>
    <string name="order_detail">订单详情</string>
    <string name="order_time_">下单时间：</string>
    <string name="receive_address_">收货地址：</string>
    <string name="receive_address">收货地址</string>
    <string name="apply_for_after_sales">申请售后</string>
    <string name="all_amount">合计</string>
    <string name="pay_way">支付方式</string>
    <string name="logistic_information">配送信息</string>
    <string name="common_invoice">普通发票</string>
    <string name="invoice_header_">发票抬头：</string>
    <string name="invoice_content_">发票内容：</string>
    <string name="invoice_content">发票内容</string>
    <string name="delete_order">删除订单</string>
    <string name="shine_comment_order">评价晒单</string>
    <string name="buy_again">再次购买</string>
    <string name="edit_receive_address">编辑收货地址</string>
    <string name="region">地区</string>
    <string name="region_">地区：</string>
    <string name="detailed_address_">详细地址：</string>
    <string name="zip_code_">邮编：</string>
    <string name="is_default_address">是否设为默认地址</string>
    <string name="hint_tel_num_or_phone_num_is_optional">手机号跟固话可只填写一个即可</string>
    <string name="save_use">保存并使用</string>
    <string name="add_receive_address">新增收货地址</string>
    <string name="search_hint">请输入车型，品牌，商品信息</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="clear_search_history">清空索索历史</string>
    <string name="most_new">最新</string>
    <string name="universal">综合</string>
    <string name="price">价格</string>
    <string name="filter">筛选</string>
    <string name="not_found_hint">抱歉，没找到符合条件的产品</string>
    <string name="win_coin_island">夺宝岛</string>
    <string name="left_time">还剩</string>
    <string name="current_price_">当前价：</string>
    <string name="fixed_price_">一口价：</string>
    <string name="bid_number_">出价次数：</string>
    <string name="over">已结束</string>
    <string name="year">年</string>
    <string name="all_auction">全部竞拍</string>
    <string name="auction_ing">正在竞拍</string>
    <string name="auction_success">竞拍成功</string>
    <string name="auction_failed">竞拍失败</string>
    <string name="bid_history">出价记录</string>
    <string name="want_bid">我要出价</string>
    <string name="bid_regular">出价规则</string>
    <string name="bid_fixed_price">一口价拍下</string>
    <string name="submit_bid">提交报价</string>
    <string name="my_price_">我的报价：</string>
    <string name="start_price_">起拍价：</string>
    <string name="min_deal_price_">最低成交价：</string>
    <string name="min_add_price_">最小加价幅度：</string>
    <string name="max_add_price_">最大加价幅度：</string>
    <string name="offline_remittance">线下汇款</string>
    <string name="remittance_hint">请您通过银行转账，或者自行到银行进行汇款，汇款账号如下：</string>
    <string name="org_name">开户名称</string>
    <string name="bank_name">开户银行</string>
    <string name="company_bank_name">您的农业银行专属账号</string>
    <string name="remittance_info">汇款信息</string>
    <string name="remitter_">汇款人：</string>
    <string name="remit_voucher_">汇款凭证：</string>
    <string name="click_to_upload_voucher">点击上传汇款凭证</string>
    <string name="invoice_inof">发票信息</string>
    <string name="invoice_type">发票类型</string>
    <string name="no_invoice">不开发票</string>
    <string name="value_add_tax">增值税发票</string>
    <string name="invoice_header">发票抬头</string>
    <string name="please_input_org_name">请输入单位名称</string>
    <string name="invoice_deliver_addr">发票邮寄地址</string>
    <string name="please_input_other_addr">请输入其他邮寄地址</string>
    <string name="same_as_order_addr">同订单地址</string>
    <string name="product_detail">商品明细</string>
    <string name="org_name_">单位名称</string>
    <string name="recognize_num">纳税人识别码</string>
    <string name="register_addr">注册地址</string>
    <string name="register_tel">注册电话</string>
    <string name="bank_account">银行账户</string>
    <string name="get_invoice_person_name">受票人姓名</string>
    <string name="get_invoice_person_phone">受票人手机</string>
    <string name="apply_return_cash">申请退款</string>
    <string name="apply_return_cash_submit_succed">您的退款申请已提交</string>
    <string name="return_cash_number_">退款编号：</string>
    <string name="return_cash_progress">退款进度</string>
    <string name="brand_recognization">品牌介绍</string>
    <string name="income">收入</string>
    <string name="outcome">支出</string>
    <string name="available_integral_">可用积分：</string>
    <string name="integral">积分</string>
    <string name="on_shelves_time">上架时间</string>
    <string name="integral_product">积分商品</string>
    <string name="image_letter_introduce">图文详情</string>
    <string name="integral_price_">积分价：</string>
    <string name="exchange_quickly">立即兑换</string>
    <string name="submit_order">提交订单</string>
    <string name="market_price_">市场价：</string>
    <string name="select_car_type_to_find_exactly_one">选择车型，精确查询配件</string>
    <string name="product_num_and_total_price">共1$件商品 总价：2$</string>
    <string name="view_logistics">查看物流</string>
    <string name="evaluation_sun">评价晒单</string>
    <string name="pay">付款</string>
    <string name="cancel_order">取消订单</string>
    <string name="apply_refund">申请退款</string>
    <string name="company_authentication_buy">企业认证优惠购</string>
    <string name="service_declare">服务说明</string>
    <string name="stage_pay_1" formatted="false">该商品支持分期购买分, 3期1.65%, 6期3.6%, 9期5.4%, 12期7.2%, 18期11.7%, 24期15.6%, 一次性收取手续费。</string>
    <string name="shut_down">关闭</string>
    <string name="preferential_price_">套餐价：</string>
    <string name="original_price_">原价：</string>
    <string name="pre_order_way">预定方案</string>
    <string name="collect_successed">收藏成功</string>
    <string name="uncollect_successed">取消收藏成功</string>

</resources>
