<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/padding_normal"
        android:text="@string/service_declare"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_biggest_"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"

        >

        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_width"
            android:scaleType="centerInside"
            android:src="@mipmap/installment_mayment"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/padding_normal"
            android:text="@string/installment_payment"
            android:textSize="@dimen/text_size_small"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        >

        <View
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_width"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/padding_normal"
            android:text="@string/stage_pay_1"
            android:textColor="@color/main_sub_text_color"
            android:textSize="@dimen/text_size_small"
            />
    </LinearLayout>

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_bottom_bar_height"
        android:layout_marginTop="@dimen/padding_biggest_"
        android:background="@drawable/main_red_pressed_sl"
        android:text="@string/shut_down"
        android:textColor="@color/white"
        android:gravity="center"
        />


</LinearLayout>