<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/main_bg_gray"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_bottom_bar_height"
        android:background="@color/white"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:src="@mipmap/back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/pay_failed"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        android:layout_marginTop="@dimen/main_big_divider_height"
        android:gravity="center"
        >

        <ImageView
            android:id="@+id/fai"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/failed"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sorry_pay_failed"
                android:paddingLeft="@dimen/padding_big"
                android:paddingBottom="@dimen/padding_small"
                android:textSize="@dimen/text_size_largest"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_reason"
                android:paddingLeft="@dimen/padding_big"
                />

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/sure_to_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/padding_big"
        android:background="@drawable/main_red_pressed_sl"
        android:text="@string/pay_again"
        android:textColor="@color/white"

        />
</LinearLayout>