<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lightgray_1"
            android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_big"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_big"
            android:paddingTop="@dimen/padding_big"
            android:text="@string/current_city"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rect"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/current_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding_normal"
                android:text="上海"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/refresh_city"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/auto_position"
                android:gravity="center"
                android:padding="@dimen/padding_normal"
                android:clickable="true"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_big"
            android:paddingTop="@dimen/padding_big"
            android:text="@string/hot_city"
            />

        <TableLayout
            android:id="@+id/hot_city_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_big"
            android:showDividers="middle"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_big"
            android:paddingTop="@dimen/padding_big"
            android:text="@string/all_city"
            />

        <TableLayout
            android:id="@+id/hot_city_abc_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_big"
            android:showDividers="middle"
            />

        <LinearLayout
            android:id="@+id/all_city_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            />

    </LinearLayout>
</ScrollView>