<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/main_bg_gray"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_bottom_bar_height"
        android:background="@color/white"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:src="@mipmap/back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/apply_return_cash"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="@dimen/main_big_divider_height"
        android:paddingBottom="@dimen/padding_big"
        android:paddingTop="@dimen/padding_big"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_large"
            android:text="@string/apply_return_cash_submit_succed"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/apply_return_cash_submit_succed"
            android:paddingBottom="@dimen/padding_big"
            android:paddingTop="@dimen/padding_big"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="订单编号：112256789\n退款编号：000000000000000"
            android:textColor="@color/main_sub_text_color"

            />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/padding_big"
        android:background="@color/main_bg_gray"
        >
        <Button
            android:id="@+id/see_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"

            android:background="@drawable/main_red_pressed_sl"
            android:text="@string/return_cash_progress"
            android:textColor="@color/white"
            android:onClick="returnCashProgress"

            />
        <Button
            android:id="@+id/continue_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/padding_big"
            android:background="@drawable/yellow_pressed_sl"
            android:text="@string/continue_buy"
            android:textColor="@color/white"
            android:onClick="continueBuy"
            />
    </LinearLayout>

</LinearLayout>